# rsh

./: CONTRIBUTING.md  Cargo.toml  README.md  rust-toolchain.toml  toolkit.rsh
crates/rsh-cli/: Cargo.toml
crates/rsh-cli/src/: config_files.rs  eval_cmds.rs  eval_file.rs  lib.rs  print.rs  prompt.rs  prompt_update.rs  reedline_config.rs  repl.rs  rsh_highlight.rs  syntax_highlight.rs  util.rs  validation.rs
crates/rsh-cli/src/commands/: commandline.rs  default_context.rs  history.rs  history_session.rs  keybindings.rs  keybindings_default.rs  keybindings_list.rs  keybindings_listen.rs
crates/rsh-cli/src/completions/: base.rs  command_completions.rs  completer.rs  completion_common.rs  completion_options.rs  custom_completions.rs  directory_completions.rs  dotrsh_completions.rs  file_completions.rs  flag_completions.rs  mod.rs  variable_completions.rs
crates/rsh-cli/src/menus/: description_menu.rs  help_completions.rs  menu_completions.rs  mod.rs
crates/rsh-cli/tests/: completions.rs
crates/rsh-cli/tests/support/: completions_helpers.rs
crates/rsh-cmd-base/: Cargo.toml  LICENSE
crates/rsh-cmd-base/src/: arg_glob.rs  hook.rs  input_handler.rs  util.rs
crates/rsh-cmd-dataframe/: Cargo.toml
crates/rsh-cmd-dataframe/src/dataframe/: README.md  mod.rs  stub.rs  test_dataframe.rs  utils.rs
crates/rsh-cmd-extra/: Cargo.toml  README.md
crates/rsh-cmd-extra/src/: example_test.rs
crates/rsh-cmd-extra/src/extra/: mod.rs
crates/rsh-cmd-lang/: Cargo.toml  README.md  build.rs
crates/rsh-cmd-lang/src/: default_context.rs  example_support.rs  example_test.rs
crates/rsh-cmd-lang/src/core_commands/: alias.rs  break_.rs  collect.rs  const_.rs  continue_.rs  def.rs  describe.rs  do_.rs  echo.rs  error_make.rs  export.rs  export_alias.rs  export_const.rs  export_def.rs  export_extern.rs  export_module.rs  export_use.rs  extern_.rs  for_.rs  hide.rs  hide_env.rs  if_.rs  ignore.rs  lazy_make.rs  let_.rs  loop_.rs  match_.rs  module.rs  mut_.rs  register.rs  return_.rs  try_.rs  use_.rs  version.rs  while_.rs
crates/rsh-color-config/: Cargo.toml
crates/rsh-color-config/src/: color_config.rs  lib.rs  matching_brackets_style.rs  rsh_style.rs  shape_color.rs  style_computer.rs  text_style.rs
crates/rsh-engine/: Cargo.toml
crates/rsh-engine/src/: call_ext.rs  column.rs  documentation.rs  env.rs  eval.rs  glob_from.rs  scope.rs
crates/rsh-explore/: Cargo.toml  LICENSE
crates/rsh-explore/src/: default_context.rs  explore.rs  lib.rs
crates/rsh-explore/src/commands/: expand.rs  help.rs  mod.rs  quit.rs  rsh.rs  table.rs  try.rs
crates/rsh-explore/src/pager/: command_bar.rs  mod.rs  status_bar.rs
crates/rsh-explore/src/registry/: command.rs
crates/rsh-explore/src/rsh_common/: command.rs  lscolor.rs  mod.rs  string.rs  table.rs  value.rs
crates/rsh-explore/src/views/: coloredtextw.rs  information.rs  interactive.rs  mod.rs  preview.rs  util.rs
crates/rsh-glob/: Cargo.toml  LICENSE-MIT  README.md
crates/rsh-glob/src/: lib.rs
crates/rsh-json/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
crates/rsh-json/src/: de.rs  error.rs  util.rs  value.rs
crates/rsh-json/tests/: main.rs
crates/rsh-lsp/: Cargo.toml  LICENSE
crates/rsh-lsp/src/: diagnostics.rs  lib.rs  notification.rs
crates/rsh-parser/: Cargo.toml  LICENSE  README.md
crates/rsh-parser/fuzz/: Cargo.toml  README.md  gather_seeds.rsh
crates/rsh-parser/fuzz/fuzz_targets/: parse.rs
crates/rsh-parser/src/: deparse.rs  flatten.rs  known_external.rs  lex.rs  lite_parser.rs  parse_keywords.rs  parse_patterns.rs  parse_shape_specs.rs  parser.rs  parser_path.rs  type_check.rs
crates/rsh-parser/tests/: test_lex.rs  test_parser.rs  test_parser_unicode_escapes.rs
crates/rsh-path/: Cargo.toml  README.md
crates/rsh-path/fuzz/: Cargo.toml  README.md
crates/rsh-path/fuzz/fuzz_targets/: path_fuzzer.rs
crates/rsh-path/tests/: util.rs
crates/rsh-plugin/: Cargo.toml
crates/rsh-plugin/src/: lib.rs
crates/rsh-plugin/src/plugin/: declaration.rs  mod.rs
crates/rsh-plugin/src/protocol/: evaluated_call.rs  mod.rs  plugin_custom_value.rs  plugin_data.rs
crates/rsh-plugin/src/serializers/: json.rs  mod.rs  msgpack.rs
crates/rsh-pretty-hex/: Cargo.toml  LICENSE  README.md
crates/rsh-pretty-hex/examples/: hex_demo.rs
crates/rsh-pretty-hex/src/: lib.rs  pretty_hex.rs
crates/rsh-pretty-hex/tests/: tests.rs
crates/rsh-std/: CONTRIBUTING.md  Cargo.toml  README.md
crates/rsh-std/src/: lib.rs
crates/rsh-std/std/: assert.rsh  dirs.rsh  dt.rsh  formats.rsh  help.rsh  iter.rsh  log.rsh  mod.rsh  testing.rsh  xml.rsh
crates/rsh-std/tests/: test_dirs.rsh  test_formats.rsh  test_iter.rsh  test_std.rsh  test_xml.rsh
crates/rsh-std/tests/logger_tests/: test_basic_commands.rsh  test_log_custom.rsh  (+2 more)
crates/rsh-table/: .gitignore  Cargo.toml  LICENSE
crates/rsh-table/examples/: table_demo.rs
crates/rsh-table/src/: common.rs  lib.rs  table.rs  unstructured_table.rs  util.rs
crates/rsh-table/tests/: common.rs  constrains.rs  expand.rs  style.rs
crates/rsh-term-grid/: .gitignore  Cargo.toml  LICENSE
crates/rsh-term-grid/examples/: grid_demo.rs
crates/rsh-term-grid/src/: grid.rs
crates/rsh-test-support/: Cargo.toml
crates/rsh-test-support/src/: commands.rs  fs.rs  lib.rs  locale_override.rs  macros.rs  playground.rs
crates/rsh-test-support/tests/: get_system_locale.rs
crates/rsh-utils/: Cargo.toml
crates/rsh-utils/src/: casing.rs  ctrl_c.rs  locale.rs  main.rs  utils.rs
crates/rsh_plugin_custom_values/: Cargo.toml
crates/rsh_plugin_custom_values/src/: cool_custom_value.rs  main.rs  second_custom_value.rs
crates/rsh_plugin_example/: Cargo.toml  README.md
crates/rsh_plugin_example/src/: example.rs  lib.rs  main.rs
crates/rsh_plugin_gstat/: Cargo.toml  README.md
crates/rsh_plugin_gstat/src/: gstat.rs  lib.rs  main.rs
crates/rsh_plugin_inc/: Cargo.toml  README.md
crates/rsh_plugin_inc/src/: inc.rs  lib.rs  main.rs
crates/rsh_plugin_query/: Cargo.toml  README.md
crates/rsh_plugin_query/src/: main.rs  query.rs  query_json.rs  query_web.rs  query_xml.rs  web_tables.rs
(+768 files in other folders)
