[package]
authors = ["The rsh Project Developers"]
description = "The foundation tools to build rsh commands."
edition = "2021"
license = "MIT"
name = "rsh-cmd-base"
repository = "https://github.com/radhesh1/rsh/tree/main/crates/rsh-cmd-base"
version = "0.87.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsh-engine = { path = "../rsh-engine", version = "0.87.2" }
rsh-glob = { path = "../rsh-glob", version = "0.87.2" }
rsh-parser = { path = "../rsh-parser", version = "0.87.2" }
rsh-path = { path = "../rsh-path", version = "0.87.2" }
rsh-protocol = { path = "../rsh-protocol", version = "0.87.2" }
rsh-utils = { path = "../rsh-utils", version = "0.87.2" }

indexmap = "2.1"
miette = "5.10.0"

[dev-dependencies]
rsh-test-support = { path = "../rsh-test-support", version = "0.87.2" }
rstest = "0.18.2"
