[package]
name = "rsh-glob"
version = "0.87.2"
authors = ["The rsh Project Developers", "The Rust Project Developers"]
license = "MIT/Apache-2.0"
description = """
Fork of glob. Support for matching file paths against Unix shell style patterns.
"""
repository = "https://github.com/radhesh1/rsh/tree/main/crates/rsh-glob"
edition = "2021"
categories = ["filesystem"]

[lib]
bench = false

[dev-dependencies]
doc-comment = "0.3"
