[package]
authors = ["The rsh Project Developers", "Christian Zangl <laktak@cdak.net>"]
description = "Fork of serde-hjson"
repository = "https://github.com/radhesh1/rsh/tree/main/crates/rsh-json"
edition = "2021"
license = "MIT"
name = "rsh-json"
version = "0.87.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
bench = false

[features]
preserve_order = ["linked-hash-map", "linked-hash-map/serde_impl"]
default = ["preserve_order"]

[dependencies]
linked-hash-map = { version = "0.5", optional = true }
num-traits = "0.2"
serde = "1.0"

[dev-dependencies]
# rsh-path = { path="../rsh-path", version = "0.87.2" }
# serde_json = "1.0"
