[package]
authors = ["The rsh Project Developers"]
description = "rsh's integrated LSP server"
repository = "https://github.com/radhesh1/rsh/tree/main/crates/rsh-lsp"
name = "rsh-lsp"
version = "0.87.2"
edition = "2021"
license = "MIT"

[dependencies]
rsh-cli = { path = "../rsh-cli", version = "0.87.2" }
rsh-parser = { path = "../rsh-parser", version = "0.87.2" }
rsh-protocol = { path = "../rsh-protocol", version = "0.87.2" }

reedline = { version = "0.26" }

crossbeam-channel = "0.5.8"
lsp-types = "0.94.1"
lsp-server = { version = "0.7.4", git = "https://github.com/schrieveslaach/rust-analyzer.git", branch = "cancelable-initialization" }
miette = "5.10"
ropey = "1.6.1"
serde = "1.0"
serde_json = "1.0"

[dev-dependencies]
rsh-cmd-lang = { path = "../rsh-cmd-lang", version = "0.87.2" }
rsh-command = { path = "../rsh-command", version = "0.87.2" }
rsh-test-support = { path = "../rsh-test-support", version = "0.87.2" }

assert-json-diff = "2.0"
tempfile = "3.2"
