[package]
authors = ["The rsh Project Developers"]
description = "rsh's parser"
repository = "https://github.com/radhesh1/rsh/tree/main/crates/rsh-parser"
edition = "2021"
license = "MIT"
name = "rsh-parser"
version = "0.87.2"
exclude = ["/fuzz"]

[lib]
bench = false

[dependencies]
rsh-engine = { path = "../rsh-engine", version = "0.87.2" }
rsh-path = { path = "../rsh-path", version = "0.87.2" }
rsh-plugin = { path = "../rsh-plugin", optional = true, version = "0.87.2" }
rsh-protocol = { path = "../rsh-protocol", version = "0.87.2" }

bytesize = "1.3"
chrono = { default-features = false, features = ['std'], version = "0.4" }
itertools = "0.11"
log = "0.4"
serde_json = "1.0"

[dev-dependencies]
rstest = { version = "0.18", default-features = false }

[features]
plugin = ["rsh-plugin"]
