[package]
authors = ["The rsh Project Developers"]
description = "rsh table printing"
repository = "https://github.com/radhesh1/rsh/tree/main/crates/rsh-table"
edition = "2021"
license = "MIT"
name = "rsh-table"
version = "0.87.2"

[lib]
bench = false

[dependencies]
rsh-protocol = { path = "../rsh-protocol", version = "0.87.2" }
rsh-utils = { path = "../rsh-utils", version = "0.87.2" }
rsh-engine = { path = "../rsh-engine", version = "0.87.2" }
rsh-color-config = { path = "../rsh-color-config", version = "0.87.2" }
nu-ansi-term = "0.49.0"
once_cell = "1.18"
fancy-regex = "0.11"
tabled = { version = "0.14.0", features = ["color"], default-features = false }

[dev-dependencies]
# rsh-test-support = { path="../rsh-test-support", version = "0.87.2"  }
