[package]
authors = ["The rsh Project Developers"]
description = "rsh utility functions"
edition = "2021"
license = "MIT"
name = "rsh-utils"
repository = "https://github.com/radhesh1/rsh/tree/main/crates/rsh-utils"
version = "0.87.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "utils"
path = "src/main.rs"
bench = false

[lib]
bench = false

[dependencies]
log = "0.4"
lscolors = { version = "0.15", default-features = false, features = ["rs-ansi-term"] }
num-format = { version = "0.4" }
strip-ansi-escapes = "0.2.0"
sys-locale = "0.3"
unicase = "2.7.0"

[target.'cfg(windows)'.dependencies]
crossterm_winapi = "0.9"
