[package]
authors = ["The rsh Project Developers"]
description = "A git status plugin for rsh"
repository = "https://github.com/radhesh1/rsh/tree/main/crates/rsh_plugin_gstat"
edition = "2021"
license = "MIT"
name = "rsh_plugin_gstat"
version = "0.87.2"

[lib]
doctest = false
bench = false

[[bin]]
name = "rsh_plugin_gstat"
bench = false

[dependencies]
rsh-plugin = { path = "../rsh-plugin", version = "0.87.2" }
rsh-protocol = { path = "../rsh-protocol", version = "0.87.2" }

git2 = "0.18"
